# cmake_learning

./: CMakeLists.txt
cmake_template1/project/: CMakeLists.txt  build.sh
cmake_template1/project/board/: CMakeLists.txt
cmake_template1/project/platform/: CMakeLists.txt
